--- a/layouts/partials/events.html
+++ b/layouts/partials/events.html
@@ -1,30 +1,30 @@
-{{ "<!-- Portfolio Grid Section -->" | safeHTML }}
-<section id="portfolio" class="bg-light-gray">
+{{ "<!-- Events Grid Section -->" | safeHTML }}
+<section id="events" class="bg-light-gray">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading">{{ with .Site.Params.portfolio.title }}{{ . | markdownify }}{{ end }}</h2>
+        <h2 class="section-heading">{{ with .Site.Params.events.title }}{{ . | markdownify }}{{ end }}</h2>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <p class="large text-muted">{{ with .Site.Params.portfolio.subtitle }}{{ . | markdownify }}{{ end }}</p>
+        <p class="large text-muted">{{ with .Site.Params.events.subtitle }}{{ . | markdownify }}{{ end }}</p>
         <br>
       </div>
     </div>
     <div class="row">
       {{ range sort .Site.Data.projects ".date" "desc" }}
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a href="#portfolioModal{{ .modalID }}" class="portfolio-link" data-toggle="modal">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
+        <div class="col-md-4 col-sm-6 events-item">
+          <a href="#eventsModal{{ .modalID }}" class="events-link" data-toggle="modal">
+            <div class="events-hover">
+              <div class="events-hover-content">
                 <i class="fa fa-plus fa-3x"></i>
               </div>
             </div>
-            {{ $url := printf "img/portfolio/%s" .preview }}
+            {{ $url := printf "img/events/%s" .preview }}
             <img src="{{ $url | absURL }}" class="img-responsive" alt="">
           </a>
-          <div class="portfolio-caption">
+          <div class="events-caption">
             <h4>{{ .title | markdownify }}</h4>
             <h4 class="text-muted">{{ .date | dateFormat "02 Jan 2006" }}</h4>
           </div>
