Compile latest live version

--- a/docs/css/agency.css
+++ b/docs/css/agency.css
@@ -9,6 +9,10 @@ body {
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
+.gap-bottom {
+    margin-bottom: 25px;
+}
+
 .text-muted {
     color: #777;
 }
@@ -372,19 +376,19 @@ section h3.section-subheading {
     text-transform: none;
 }
 
-#portfolio .portfolio-item {
+#events .events-item {
     right: 0;
     margin: 0 0 15px;
 }
 
-#portfolio .portfolio-item .portfolio-link {
+#events .events-item .events-link {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 400px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+#events .events-item .events-link .events-hover {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -395,11 +399,11 @@ section h3.section-subheading {
     transition: all ease .5s;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover:hover {
+#events .events-item .events-link .events-hover:hover {
     opacity: 1;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content {
+#events .events-item .events-link .events-hover .events-hover-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -410,16 +414,16 @@ section h3.section-subheading {
     color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content i {
+#events .events-item .events-link .events-hover .events-hover-content i {
     margin-top: -12px;
 }
 
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h3,
-#portfolio .portfolio-item .portfolio-link .portfolio-hover .portfolio-hover-content h4 {
+#events .events-item .events-link .events-hover .events-hover-content h3,
+#events .events-item .events-link .events-hover .events-hover-content h4 {
     margin: 0;
 }
 
-#portfolio .portfolio-item .portfolio-caption {
+#events .events-item .events-caption {
     margin: 0 auto;
     padding: 25px;
     max-width: 400px;
@@ -427,24 +431,24 @@ section h3.section-subheading {
     background-color: #fff;
 }
 
-#portfolio .portfolio-item .portfolio-caption h4 {
+#events .events-item .events-caption h4 {
     margin: 0;
     text-transform: none;
 }
 
-#portfolio .portfolio-item .portfolio-caption p {
+#events .events-item .events-caption p {
     margin: 0;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
     font-style: italic;
 }
 
-#portfolio * {
+#events * {
     z-index: 2;
 }
 
 @media(min-width:767px) {
-    #portfolio .portfolio-item {
+    #events .events-item {
         margin: 0 0 30px;
     }
 }
@@ -672,32 +676,33 @@ section h3.section-subheading {
 
 .team-member img {
     margin: 0 auto;
-    border: 7px solid #fff;
+    border: 5px solid #fff;
 }
 
 .team-member p {
     margin-top: 0;
 }
-.team-member h3 {
+.team-member h4 {
+    font-size: 16px;
     text-transform: none;
     font-weight: 600;
     color: #333;
 }
 
-.team-member h4 {
-    font-size: 16px;
+.team-member h5 {
+    font-size: 14px;
     text-transform: none;
     font-weight: 400;
     color: #777;
     margin-bottom: 0px;
 }
 
-.team-member h4 a {
+.team-member h5 a {
     text-transform: none;
 }
 
-.team-member h5 {
-    font-size: 14px;
+.team-member h6 {
+    font-size: 12px;
     text-transform: none;
     font-style: italic;
     font-weight: 200;
@@ -709,7 +714,7 @@ section h3.section-subheading {
     margin-top: 0px;
 }
 
-.team-member h5 a {
+.team-member h6 a {
     text-transform: none;
 }
 
@@ -864,7 +869,7 @@ ul.social-buttons li a:active {
     outline: 0;
 }
 
-.portfolio-modal .modal-content {
+.events-modal .modal-content {
     padding: 100px 0;
     min-height: 100%;
     border: 0;
@@ -875,32 +880,32 @@ ul.social-buttons li a:active {
     box-shadow: none;
 }
 
-.portfolio-modal .modal-content h2 {
+.events-modal .modal-content h2 {
     margin-bottom: 15px;
     font-size: 3em;
 }
 
-.portfolio-modal .modal-content p {
+.events-modal .modal-content p {
     margin-bottom: 30px;
 }
 
-.portfolio-modal .modal-content p.item-intro {
+.events-modal .modal-content p.item-intro {
     margin: 20px 0 30px;
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 16px;
     font-style: italic;
 }
 
-.portfolio-modal .modal-content ul.list-inline {
+.events-modal .modal-content ul.list-inline {
     margin-top: 0;
     margin-bottom: 30px;
 }
 
-.portfolio-modal .modal-content img {
+.events-modal .modal-content img {
     margin-bottom: 30px;
 }
 
-.portfolio-modal .close-modal {
+.events-modal .close-modal {
     position: absolute;
     top: 25px;
     right: 25px;
@@ -910,11 +915,11 @@ ul.social-buttons li a:active {
     cursor: pointer;
 }
 
-.portfolio-modal .close-modal:hover {
+.events-modal .close-modal:hover {
     opacity: .3;
 }
 
-.portfolio-modal .close-modal .lr {
+.events-modal .close-modal .lr {
     z-index: 1051;
     width: 1px;
     height: 75px;
@@ -925,7 +930,7 @@ ul.social-buttons li a:active {
     transform: rotate(45deg);
 }
 
-.portfolio-modal .close-modal .lr .rl {
+.events-modal .close-modal .lr .rl {
     z-index: 1052;
     width: 1px;
     height: 75px;
@@ -935,7 +940,7 @@ ul.social-buttons li a:active {
     transform: rotate(90deg);
 }
 
-.portfolio-modal .modal-backdrop {
+.events-modal .modal-backdrop {
     display: none;
     opacity: 0;
 }
