--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -1,9 +1,15 @@
 {{ "<!-- Sponsors Aside -->" | safeHTML }}
-<aside id="sponsors" class="sponsors">
+<section id="sponsors" class="">
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h4 class="heading">{{ with .Site.Params.sponsors.title }}{{ . | markdownify }}{{ end }}</h4>
+        <h2 class="section-heading">{{ with .Site.Params.sponsors.title }}{{ . | markdownify }}{{ end }}</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2 text-center">
+        <p class="large text-muted gap-bottom">{{ with .Site.Params.sponsors.description }}{{ . | markdownify }}{{ end }}</p>
+        <br>
       </div>
     </div>
     <div class="row flexbox{{ if .Site.Params.sponsors.center }} flexbox-center{{ end }}">
@@ -23,4 +29,4 @@
 
     </div>
   </div>
-</aside>
+</section>
