--- a/layouts/partials/events.html
+++ b/layouts/partials/events.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <p class="large text-muted">{{ with .Site.Params.events.subtitle }}{{ . | markdownify }}{{ end }}</p>
+        <p class="large text-muted gap-bottom">{{ with .Site.Params.events.description }}{{ . | markdownify }}{{ end }}</p>
         <br>
       </div>
     </div>
