--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -19,10 +19,10 @@
           {{ $url := printf "img/logos/%s" .logo }}
           {{ if .link }}
             <a href="{{ .link }}">
-              <img src="{{ $url | absURL }}" class="img-responsive img-centered" alt="">
+              <img data-src="{{ $url | absURL }}" class="img-responsive img-centered" alt="">
             </a>
           {{ else }}
-            <img src="{{ $url | absURL }}" class="img-responsive img-centered" alt="">
+            <img data-src="{{ $url | absURL }}" class="img-responsive img-centered" alt="">
           {{ end }}
         </div>
       {{ end }}
