--- a/layouts/partials/modals.html
+++ b/layouts/partials/modals.html
@@ -16,7 +16,7 @@
               <h4 class="text-muted">{{ .date | dateFormat "02 Jan 2006" }}</h4>
               <br>
               {{ $url := printf "img/events/%s" .img }}
-              <img class="img-responsive img-centered" src="{{ $url | absURL }}" alt="">
+              <img class="img-responsive img-centered" data-src="{{ $url | absURL }}" alt="">
               <p>{{ .description | markdownify }}</p>
               <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> {{ with $.Site.Params.events.modal.buttonText }}{{ . }}{{ end }}</button>
             </div>
