--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -11,10 +11,18 @@
         <p class="large text-muted gap-bottom">{{ with .Site.Params.team.description }}{{ . | markdownify }}{{ end }}</p>
       </div>
     </div>
-    <div class="row flexbox{{ if .Site.Params.team.center }} flexbox-center{{ end }}">
-      {{ range .Site.Params.team.members }}
+    <div>
+      {{ range .Site.Params.team.wings }}
+      <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-subheading" style="margin-bottom: 50px">{{ . | markdownify }}</h3>
+          </div>
+      </div>
+      <div class="row flexbox{{ if $.Site.Params.team.center }} flexbox-center{{ end }}">
+        {{ range where $.Site.Params.team.members "wing" . }}
         <div class="col-md-3 col-sm-4 col-xs-6 col">
           <div class="team-member">
+
             {{ $url := printf "img/team/%s" .img }}
             <img data-src="{{ $url | absURL }}" class="img-responsive img-circle" alt="{{ .name }}">
             <h3>{{ .name | markdownify }}</h3>
@@ -22,34 +30,11 @@
             {{ with .position }}
             <h5>{{ . | markdownify }}</h5>
             {{ end }}
-            {{ with .reportsTo }}
-            <h6 class="report">Reports to {{ . | markdownify }}</h6>
-            {{ end }}
-
-            {{ with .livesIn }}
-            <h6>Lives in {{ . | markdownify }}</h6>
-            {{ end }}
-
-            {{ with .scope }}
-            <ul>
-              {{ range . }}
-                <li>{{ . | markdownify }}</li>
-              {{ end }}
-            </ul>
-            {{ end }}
-
-            <ul class="list-inline social-buttons">
-              {{ range .social }}
-                <li><a href="{{ index . 1 }}"><i class="fa {{ index . 0 }}"></i></a></li>
-              {{ end }}
-            </ul>
-
-            {{ with .bio }}
-            <p class="team-bio">{{ . | markdownify }}</p>
-            {{ end }}
 
           </div>
         </div>
+        {{ end }}
+      </div>
       {{ end }}
     </div>
   </div>
