--- a/docs/css/agency.css
+++ b/docs/css/agency.css
@@ -18,7 +18,7 @@ body {
 }
 
 .text-primary {
-    color: #fed136;
+    color: #153b91;
 }
 
 p {
@@ -39,7 +39,7 @@ a.active {
 }
 
 a {
-    color: #fed136;
+    color: #153b91;
 }
 
 a:hover,
@@ -73,12 +73,12 @@ h6 {
 }
 
 .btn-primary {
-    border-color: #fed136;
+    border-color: #153b91;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     color: #fff;
-    background-color: #fed136;
+    background-color: #153b91;
 }
 
 .btn-primary:hover,
@@ -112,25 +112,25 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #153b91;
+    background-color: #153b91;
 }
 
 .btn-primary .badge {
-    color: #fed136;
+    color: #153b91;
     background-color: #fff;
 }
 
 .btn-xl {
     padding: 20px 40px;
-    border-color: #fed136;
+    border-color: #153b91;
     border-radius: 3px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 18px;
     font-weight: 700;
     color: #fff;
-    background-color: #fed136;
+    background-color: #153b91;
 }
 
 .btn-xl:hover,
@@ -164,12 +164,12 @@ fieldset[disabled] .btn-xl:active,
 .btn-xl.disabled.active,
 .btn-xl[disabled].active,
 fieldset[disabled] .btn-xl.active {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #153b91;
+    background-color: #153b91;
 }
 
 .btn-xl .badge {
-    color: #fed136;
+    color: #153b91;
     background-color: #fff;
 }
 
@@ -180,7 +180,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-brand {
     font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #fed136;
+    color: #153b91;
 }
 
 .navbar-default .navbar-brand:hover,
@@ -217,8 +217,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #153b91;
+    background-color: #153b91;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -227,7 +227,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #fed136;
+    background-color: #153b91;
 }
 
 .navbar-default .nav li a {
@@ -241,13 +241,13 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #fed136;
+    color: #153b91;
 }
 
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
-    background-color: #fed136;
+    background-color: #153b91;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
@@ -522,7 +522,7 @@ section h3.section-subheading {
     border-radius: 100%;
     text-align: center;
     color: #fff;
-    background-color: #fed136;
+    background-color: #153b91;
 }
 
 .timeline>li .timeline-image h4 {
@@ -791,7 +791,7 @@ section#contact .form-group textarea.form-control {
 }
 
 section#contact .form-control:focus {
-    border-color: #fed136;
+    border-color: #153b91;
     box-shadow: none;
 }
 
@@ -874,7 +874,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #fed136;
+    background-color: #153b91;
 }
 
 .btn:focus,
@@ -962,12 +962,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #fed136;
+    background: #153b91;
 }
 
 ::selection {
     text-shadow: none;
-    background: #fed136;
+    background: #153b91;
 }
 
 img::selection {
@@ -979,5 +979,5 @@ img::-moz-selection {
 }
 
 body {
-    webkit-tap-highlight-color: #fed136;
+    webkit-tap-highlight-color: #153b91;
 }
