--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -18,7 +18,7 @@ body {
 }
 
 .text-primary {
-    color: #fed136;
+    color: #143a91;
 }
 
 p {
@@ -39,14 +39,14 @@ a.active {
 }
 
 a {
-    color: #fed136;
+    color: #143a91;
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #fec503;
+    color: #22bef8;
 }
 
 h1,
@@ -73,12 +73,12 @@ h6 {
 }
 
 .btn-primary {
-    border-color: #fed136;
+    border-color: #22bef8;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     color: #fff;
-    background-color: #fed136;
+    background-color: #22bef8;
 }
 
 .btn-primary:hover,
@@ -86,9 +86,9 @@ h6 {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-    border-color: #f6bf01;
+    border-color: #143a91;
     color: #fff;
-    background-color: #fec503;
+    background-color: #143a91;
 }
 
 .btn-primary:active,
@@ -123,14 +123,14 @@ fieldset[disabled] .btn-primary.active {
 
 .btn-xl {
     padding: 20px 40px;
-    border-color: #fed136;
+    border-color: #22bef8;
     border-radius: 3px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 18px;
     font-weight: 700;
     color: #fff;
-    background-color: #fed136;
+    background-color: #22bef8;
 }
 
 .btn-xl:hover,
@@ -138,9 +138,9 @@ fieldset[disabled] .btn-primary.active {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #f6bf01;
+    border-color: #143a91;
     color: #fff;
-    background-color: #fec503;
+    background-color: #143a91;
 }
 
 .btn-xl:active,
@@ -217,8 +217,8 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #143a91;
+    background-color: #143a91;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
@@ -227,7 +227,7 @@ fieldset[disabled] .btn-xl.active {
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #fed136;
+    background-color: #143a91;
 }
 
 .navbar-default .nav li a {
@@ -241,7 +241,7 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #fed136;
+    color: #22bef8;
 }
 
 .navbar-default .navbar-nav>.active>a {
@@ -874,7 +874,7 @@ ul.social-buttons li a {
 ul.social-buttons li a:hover,
 ul.social-buttons li a:focus,
 ul.social-buttons li a:active {
-    background-color: #fed136;
+    background-color: #22bef8;
 }
 
 .btn:focus,
@@ -962,12 +962,12 @@ ul.social-buttons li a:active {
 
 ::-moz-selection {
     text-shadow: none;
-    background: #fed136;
+    background: #143a91;
 }
 
 ::selection {
     text-shadow: none;
-    background: #fed136;
+    background: #143a91;
 }
 
 img::selection {
