use an actual icon instead of the drawn div thing

--- a/layouts/partials/modals.html
+++ b/layouts/partials/modals.html
@@ -3,10 +3,7 @@
   <div class="events-modal modal fade" id="eventsModal-{{ $index }}" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-content">
       <div class="close-modal" data-dismiss="modal">
-        <div class="lr">
-          <div class="rl">
-          </div>
-        </div>
+        <i class="fa fa-times fa-3x" aria-hidden="true"></i>
       </div>
       <div class="container">
         <div class="row">
