--- a/layouts/partials/modals.html
+++ b/layouts/partials/modals.html
@@ -13,7 +13,7 @@
               <h4 class="text-muted">{{ .date | dateFormat "02 Jan 2006" }}</h4>
               <br>
               {{ $url := printf "img/events/%s" .img }}
-              <img class="img-responsive img-centered" data-src="{{ $url | absURL }}" alt="">
+              <img class="img-responsive img-centered" src="{{ $url | absURL }}" alt="">
               <p>{{ .description | markdownify }}</p>
             </div>
           </div>
